--- a/Training-Web/src/app/training.component.html
+++ b/Training-Web/src/app/training.component.html
@@ -14,14 +14,16 @@
         <div class="form-group">
           <label class="col-sm-2 control-label" for="startDate">Start Date</label>
           <div class="col-sm-8">
-            <input id="startDate" type="text" class="form-control">
+            <input type="text" bsDatepicker  class="form-control" 
+                  [bsConfig]= "datePickerConfig">  
           </div>
         </div>
 
         <div class="form-group">
             <label class="col-sm-2 control-label" for="endDate">End Date</label>
             <div class="col-sm-8">
-              <input id="endDate" type="text" class="form-control">
+                <input type="text" bsDatepicker  class="form-control" 
+                [bsConfig]= "datePickerConfig"> 
             </div>
           </div>
   
