declare constant validation messages

--- a/Training-Web/src/app/training.component.html
+++ b/Training-Web/src/app/training.component.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal border border-primary">
+<form class="form-horizontal border border-primary" [formGroup]="trainingFG">
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title bg-primary text-light text-center">Create Training</h3>
@@ -33,3 +33,4 @@
       </div>
     </div>
   </form>
+
