--- a/Training-Web/src/app/training.component.html
+++ b/Training-Web/src/app/training.component.html
@@ -7,7 +7,11 @@
         <div class="form-group">
           <label class="col-sm-2 control-label" for="trainingName">Training Name</label>
           <div class="col-sm-8">
-            <input id="trainingName" type="text" class="form-control" >
+            <input type="text" class="form-control" formControlName="TrainingName"
+                      [class.is-invalid]="formErrors.TrainingName" (blur)="logValidationErrors()">     
+                      <small class="text-danger" *ngIf="formErrors.TrainingName">
+                          {{formErrors.TrainingName}}
+                      </small>
           </div>
         </div>
   
