--- a/Training-Web/src/app/training.component.html
+++ b/Training-Web/src/app/training.component.html
@@ -14,22 +14,27 @@
                       </small>
           </div>
         </div>
-  
-        <div class="form-group">
-          <label class="col-sm-2 control-label" for="startDate">Start Date</label>
-          <div class="col-sm-8">
-            <input type="text" bsDatepicker  class="form-control" 
-                  [bsConfig]= "datePickerConfig">  
-          </div>
-        </div>
-
-        <div class="form-group">
-            <label class="col-sm-2 control-label" for="endDate">End Date</label>
+        <div formGroupName="DateGroup">
+            <div class="form-group">
+            <label class="col-sm-2 control-label" for="startDate">Start Date</label>
             <div class="col-sm-8">
-                <input type="text" bsDatepicker  class="form-control" 
-                [bsConfig]= "datePickerConfig"> 
+                <input type="text" bsDatepicker  class="form-control" formControlName="StartDate"
+                [bsConfig]= "datePickerConfig"
+                [class.is-invalid]="formErrors.StartDate" (blur)="logValidationErrors()">               
+                    <small class="text-danger" *ngIf="formErrors.StartDate ">
+                        {{formErrors.StartDate}}
+                    </small>
             </div>
-          </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label" for="endDate">End Date</label>
+                <div class="col-sm-8">
+                    <input type="text" bsDatepicker  class="form-control" 
+                    [bsConfig]= "datePickerConfig"> 
+                </div>
+            </div>
+        </div>
   
       </div>
       <div class="panel-footer">
