--- a/Training-Web/src/app/training.component.html
+++ b/Training-Web/src/app/training.component.html
@@ -43,7 +43,10 @@
   
       </div>
       <div class="panel-footer">
-        <button class="btn btn-primary" type="submit">Save</button>
+            <button type="submit" 
+                    class="btn btn-primary" 
+                    [disabled]="trainingFG.invalid"
+                    (click)="addNewTraining()">Save</button>
       </div>
     </div>
   </form>
