calling api post method

--- a/Training-Web/src/app/training.component.html
+++ b/Training-Web/src/app/training.component.html
@@ -46,7 +46,7 @@
             <button type="submit" 
                     class="btn btn-primary" 
                     [disabled]="trainingFG.invalid"
-                    (click)="addNewTraining()">Save</button>
+                    (click)="fncAddNewTraining()">Save</button>
       </div>
     </div>
   </form>
