--- a/Training-Web/src/app/training.component.html
+++ b/Training-Web/src/app/training.component.html
@@ -43,10 +43,15 @@
   
       </div>
       <div class="panel-footer">
-            <button type="submit" 
+          <div class="row">
+                <div class="col-sm-6 text-right">{{statusMessage}}</div>
+                <div class="col-sm-2 text-right">
+                    <button type="submit" 
                     class="btn btn-primary" 
                     [disabled]="trainingFG.invalid"
                     (click)="fncAddNewTraining()">Save</button>
+            </div>
+        </div>                
       </div>
     </div>
   </form>
