--- a/Training-Web/src/app/training.component.html
+++ b/Training-Web/src/app/training.component.html
@@ -44,7 +44,9 @@
       </div>
       <div class="panel-footer">
           <div class="row">
-                <div class="col-sm-6 text-right">{{statusMessage}}</div>
+                <div class="col-sm-6 text-right">
+                    <small class="text-dark">{{statusMessage}}</small>
+                </div>
                 <div class="col-sm-2 text-right">
                     <button type="submit" 
                     class="btn btn-primary" 
