unit test cases for training component

--- a/Training-Web/src/app/training.component.html
+++ b/Training-Web/src/app/training.component.html
@@ -1,7 +1,7 @@
 <form class="form-horizontal border border-primary" [formGroup]="trainingFG">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title bg-primary text-light text-center">Create Training</h3>
+        <h3 class="panel-title bg-primary text-light text-center">{{trainingPageTitle}}</h3>
       </div>
       <div class="panel-body">
         <div class="form-group">
